Button connection for Tutorial page - Tutorial button in Game page is linked to Tutorial page - Tutorial page realigned and the back button is working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
      
         <activity android:name=".GamePage" />
         <activity android:name=".GameNameActivity" />
+        <activity android:name=".Tutorial"/>
         <activity android:name=".LogoActivity">
+
         
 
             <intent-filter>
